--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
       <%= content_tag :div, msg, :id => "flash_#{name}"
           if msg.is_a?(String) %>
     </div>
-    <%> end <%>
+    <% end %>
 
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
